# ROS2_Autoware_Teleop

./: README.md
PCA/: CMakeLists.txt  package.xml
PCA/src/: PCA_decoder.py  manual_teleop_v2.cpp
PCB/: CMakeLists.txt  package.xml
PCB/launch/: PCB_launch.py
PCB/src/: PCB_encoder.py  g923_debug.cpp  teleop_g923_node_old.cpp
manual_teleop/: CMakeLists.txt  read.md  temp_keyboard.cpp  temp_manual.cpp
manual_teleop/launch/: G923_launch.py
manual_teleop/src/: PCA_decoder.py  PCB_encoder.py  keyboard_side.cpp  manual_teleop.cpp  manual_teleop_v1.cpp  teleop_g923_node.cpp
